[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = "Shared traits including `BasicCurrency`, `SettCurrency`, `Auction` and more."
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = "stp258-traits"
repository = "https://github.com/Setheum-Labs/serp-traits/"
version = "0.5.0-dev"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
impl-trait-for-tuples = "0.1.3"
frame-support = { version = "3.0.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
	"orml-utilities/std",
]
